<resources>
    <string name="app_name">MyFirstThermalApplication</string>
    <string name="image_with_ir_and_visual_data_mixed">image with IR and visual data mixed</string>
    <string name="connect_f1_text">Connect FLIR One</string>
    <string name="connection_status_text">Status %1$s</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="start_discovery_text">Start Discovery</string>
    <string name="stop_discovery_text">Stop Discovery</string>
    <string name="discovery_status_text">Discovery Status .....</string>
</resources>