<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/msx_image"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:contentDescription="@string/image_with_ir_and_visual_data_mixed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Start / Stop discovery buttons  -->
        <Button
            android:text="@string/start_discovery_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startDiscovery"
            android:id="@+id/start_discovery"/>

        <Button
            android:text="@string/stop_discovery_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopDiscovery"
            android:id="@+id/stop_discovery"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/discovery_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discovery_status_text"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <Button
            android:id="@+id/connect_flir_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="connectFlirOne"
            android:text="@string/connect_f1_text"
            app:iconPadding="8dp" />
        <Button
            android:id="@+id/disconnect_any"
            android:onClick="disconnectFlirOne"
            android:text="@string/disconnect_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/connection_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_status_text"/>
    </LinearLayout>
</LinearLayout>